<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="activity_object_detail_title">Object details</string>
    <string name="activity_object_detail_button_route">Show route</string>
    <string name="activity_object_detail_button_information">Information</string>
    <string name="activity_object_detail_button_tasks">Your tasks</string>
    <string name="activity_object_information_title">Object information</string>
    <string name="activity_object_information_contact">Contact</string>
    <string name="activity_object_information_address">Address</string>
    <string name="activity_object_information_object_number">Object number</string>
    <string name="activity_object_tasks_title">Your tasks</string>
    <string name="activity_object_tasks_button_new_tast">New task</string>
    <string name="app_name">Facility Manager</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_logout">Logout</string>
    <string name="activity_welcome_title">Facility Manager 2.0</string>
    <string name="activity_welcome_message">Log in to use\nFacility Manager!</string>
    <string name="activity_welcome_label_username">Username</string>
    <string name="activity_welcome_label_password">Password</string>
    <string name="activity_welcome_button_login">Login</string>
    <string name="activity_welcome_logo_description">Facility Manager Logo</string>
    <string name="activity_welcome_logout_message">You successfully logged out!</string>
    <string name="activity_welcome_login_failed_message">Login failed!\nPlease try again.</string>
    <string name="activity_home_title">Home</string>
    <string name="activity_home_button_all_objects">All objects</string>
    <string name="activity_home_button_find_object">Find object</string>
    <string name="activity_home_message">%1$s %2$s</string>
    <string name="activity_search_object_title">Search your objects</string>
    <string name="activity_search_object_find_by">Find by</string>
    <string name="activity_search_object_by_address">Address</string>
    <string name="activity_search_object_by_qr_code">QR Code</string>
    <string name="activity_search_object_by_location">Location</string>
    <string name="activity_search_object_text_street">Street</string>
    <string name="activity_search_object_text_postal_code">Postal code</string>
    <string name="activity_search_object_button_search">Search</string>
    <string name="activity_search_object_button_scan">Scan</string>
    <string name="activity_search_object_validation_title">Validation</string>
    <string name="activity_search_object_validation_address_input">Please fill at least one of the requested field</string>
    <string name="activity_search_object_location_search_info">Scan the near area (2 km) around your current position.</string>
    <string name="activity_search_object_qr_code_search_info">Scan a QR code to find an object.</string>
    <string name="activity_search_object_result_title">Objects</string>
    <string name="activity_search_object_result_empty_list">No objects were found.</string>
    <string name="activity_search_object_result_object_number_header">Number</string>
    <string name="activity_search_object_result_object_name_header">Description</string>
    <string name="activity_task_list_name_header">Task</string>
    <string name="activity_task_list_state_header">State</string>
    <string name="activity_object_route_title">Route to object</string>
    <string name="activity_object_route_error">Unable to create route.\nError: %1$d\nMessage: %1$s</string>
    <string name="activity_object_route_mapquest_api_key">Kmjtd%7Cluu22gurnq%2Can%3Do5-gzrl</string>
    <string name="activity_object_route_button_show_route">Show route</string>
    <string name="activity_object_route_button_show_map">Show map</string>
    <string name="activity_object_new_task_title">New task for object</string>
    <string name="activity_object_new_task_name">Name</string>
    <string name="activity_object_new_task_description">Description</string>
    <string name="activity_object_new_task_frequency">Frequency</string>
    <string name="activity_object_new_task_information">Information</string>
    <string name="activity_object_new_task_button_add_task">Add task</string>
    <string name="activity_object_task_detail_title">Task details</string>
    <string name="activity_object_task_detail_workflow">Workflow</string>
    <string name="activity_object_task_detail_description">Description</string>

</resources>