<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".SearchObjects" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_find_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/activity_search_object_find_by"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radio_button_group_find_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_marginLeft="20dp"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio_button_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="checkRadioButton"
                android:text="@string/activity_search_object_by_address"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_button_qr_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="checkRadioButton"
                android:text="@string/activity_search_object_by_qr_code"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_button_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="checkRadioButton"
                android:text="@string/activity_search_object_by_location"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <EditText
            android:id="@+id/text_street"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_search_object_text_street"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/text_postal_code"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_search_object_text_postal_code"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button_search_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:onClick="searchByAddress"
            android:text="@string/activity_search_object_button_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_qr_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_search_qr_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="searchByQrCode"
            android:text="@string/activity_search_object_button_scan" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >
        
        <TextView
            android:id="@+id/label_location_search_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_search_object_location_search_info"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/button_search_location"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:onClick="searchByLocation"
            android:text="@string/activity_search_object_button_scan" />
    </LinearLayout>

</LinearLayout>