<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".WelcomeActivity" >

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_message"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/label_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/activity_welcome_label_username" />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_welcome_label_password" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_gravity="top"
            android:layout_weight="0.5"
            android:contentDescription="@string/activity_welcome_logo_description"
            android:src="@drawable/ic_launcher" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.5"
            android:onClick="login"
            android:text="@string/activity_welcome_button_login" />
    </LinearLayout>

</LinearLayout>