<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".NewObjectTask" >

    <TextView
        android:id="@+id/textViewEditTaskNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_object_new_task_name" />

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewEditTaskDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/activity_object_new_task_description" />

    <EditText
        android:id="@+id/editTaskDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewEditTaskFrequencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/activity_object_new_task_frequency" />

    <Spinner
        android:id="@+id/editTaskFrequency"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewEditTaskFrequencyInfoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/activity_object_new_task_information" />

    <EditText
        android:id="@+id/editTaskFrequencyInformation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Switch
            android:id="@+id/editTaskDetailSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="DO"
            android:textOn="OK" />
    </LinearLayout>

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:onClick="addTask"
        android:text="@string/activity_object_new_task_button_add_task" />

</LinearLayout>