<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".ResultObjectsWay" >

    <LinearLayout
        android:id="@+id/switchLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8" >

        <LinearLayout
            android:id="@+id/mapLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <com.mapquest.android.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:apiKey="@string/activity_object_route_mapquest_api_key"
                android:clickable="true"
                android:enabled="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/itineraryLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone" >

            <WebView
                android:id="@+id/itineraryView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/showMapButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onShowMapClick"
            android:text="@string/activity_object_route_button_show_map"
            android:visibility="gone" />

        <Button
            android:id="@+id/showItineraryButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onShowRouteClick"
            android:enabled="false"
            android:text="@string/activity_object_route_button_show_route"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>